# SPDX-FileCopyrightText: Copyright (c) 2025-2026 Palmshed
# SPDX-License-Identifier: MIT

[project]
name = "palmshed-sdk"
version = "0.1.0"
description = "Gemini AI client for Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Palmshed" }]
dependencies = [
    "google-genai>=0.1.0",
    "gTTS>=2.5.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
redis = ["redis>=5.0.0"]
vertex = ["google-cloud-aiplatform>=1.38.0"]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["palmshed_sdk"]

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
